src/test/deca/avecObjet/valid/is_instance_of_hierarchy.deca
class A {}
class C {}

{
    A a = new A();
    println(a instanceof C);
}