src/test/deca/avecObjet/invalid/is_instance_of_lvalue.deca
{
    int i = 5;
    if (i instanceof Object) {
        println("KO");
    }
}